<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="#FFFFFF"
    tools:context=".view.SigninActivity">


    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/login"
        android:textColor="#000000"
        android:textSize="24sp"
        android:fontFamily="@font/roboto_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />

    <LinearLayout
        android:id="@+id/input_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="@id/tvLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/btnEntrar"
        >

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="25dp"
            android:autofillHints=""
            android:background="@drawable/background_input_user"
            android:hint="@string/email"
            android:textColorHint="#838383"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            app:cornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLogin" />

        <EditText
            android:id="@+id/etSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:autofillHints=""
            android:background="@drawable/background_input_user"
            android:hint="@string/senha"
            app:passwordToggleEnabled="true"
            android:textColorHint="#838383"
            android:inputType="textPassword"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etEmail" />

        <TextView
            android:id="@+id/tvMostrarSenha"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:clickable="true"
            android:focusable="true"
            android:padding="4dp"
            android:text="@string/mostrar"
            android:textColor="#000000"
            android:textSize="14sp"
            android:fontFamily="@font/roboto_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etSenha" />
    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="center"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@id/btnEntrar"
        app:layout_constraintTop_toTopOf="@id/btnEntrar"
        app:layout_constraintEnd_toEndOf="@id/btnEntrar"
        app:layout_constraintBottom_toBottomOf="@id/btnEntrar"
        />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#E60233"
        android:padding="12dp"
        android:text="@string/login_uppercase"
        android:textColor="#FFFFFF"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_user"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="56dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnEntrar">

        <TextView
            android:id="@+id/tvEsqueciSenha"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/esqueci_a_senha"
            android:textColor="#000000"
            android:fontFamily="@font/roboto_medium"
            android:clickable="true"
            android:focusable="true"/>

        <TextView
            android:gravity="end"
            android:id="@+id/tvCriarConta"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/cadastrar_se"
            android:textColor="#000000"
            android:fontFamily="@font/roboto_medium"
            android:clickable="true"
            android:focusable="true"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
